# zstdtests

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PrintTest  README.md  a.out  cmake_install.cmake  compile_commands.json  mainlol  zoobyBin  zoobyBin.c
.cache/clangd/index/: DisplayMgr.c.A51C32B15636E4A4.idx  Memory.c.15881D0E71B114E4.idx  PopenWindow.c.F6882588C1188F50.idx  Print.c.B3CDDFEB8DDF66F7.idx  Routines.c.C70B1B12CF150F34.idx  Tests.c.C469FCFBE909C585.idx  Thread.c.939DA852453150EC.idx  ThreadT.c.D314B877654CDDA9.idx  Update.c.3C71E029EB3936A2.idx  Wayland.c.0CB0FD6EA5D2A570.idx  Wayland.c.2E7A74B8FBA83790.idx  siteTest.c.728D3F002E570F05.idx  specsTest.c.C5EEAB99E2EE54D1.idx  zTests.c.3F02FFE5B3F5CDDE.idx  zoobyBin.c.302CB8F7918CC0F1.idx  zoobyBin.c.F8A17870244E1D32.idx
Tests/: DisplayMgr.c  Memory.c  PopenWindow.c  Print.c  Routines.c  ThreadT.c  Update.c  siteTest.c  specsTest.c  zTests.c
